# wxRTCFD_Code

./: .gitignore  CMakeLists.txt  README.md  build.sh  wxRTCFD_Code.cbp  wxRTCFD_Code_FB.cbp
include/: GUIFrame.h  draw (copie).h  draw.h  fluid.h  region.h  settings.h  wxRTCFD_Code_App.h  wxRTCFD_Code_FBApp.h  wxRTCFD_Code_FBMain.h  wxRTCFD_Code_Main.h
pics/: icon.xpm
src/: .region.cpp.swp  GUIFrame.cpp  WxWizFrame.fbp  draw (copie).cpp  draw.cpp  fluid.cpp  region.cpp  settings.cpp  wxRTCFD_Code_App.cpp  wxRTCFD_Code_FBApp.cpp  wxRTCFD_Code_FBMain.cpp  wxRTCFD_Code_Main.cpp
